[pom] Comment out javadoc fix as we are not yet onto 11
activation is by the jdk used, I don't use 8 to do this nor will it at this point.  So that will only work once we officially jump to 11.